--- a/index.html
+++ b/index.html
@@ -3,101 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>مملكة علوش - الإصدار الذهبي 👑</title>
+    <title>مملكة علوش - البحث الذكي 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
-        :root { --gold: #ffd700; --bg: #000; --panel: #0a0a0a; }
-        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-        body { background: var(--bg); color: #fff; font-family: 'Segoe UI', sans-serif; margin: 0; overflow: hidden; height: 100vh; }
+        :root { --gold: #ffd700; --bg: #000; }
+        body { background: var(--bg); color: #fff; font-family: sans-serif; margin: 0; overflow: hidden; height: 100vh; }
+        
+        /* الخلفية والنجوم */
+        #star-field { position: fixed; width: 100%; height: 100%; z-index: 1; pointer-events: none; }
+        .star { position: absolute; background: #fff; border-radius: 50%; animation: blink 2s infinite; }
+        @keyframes blink { 0%, 100% { opacity: 0.3; } 50% { opacity: 1; } }
 
-        /* نجوم الخلفية */
-        #stars { position: fixed; width: 100%; height: 100%; z-index: 1; pointer-events: none; }
-        .star { position: absolute; background: #fff; border-radius: 50%; animation: blink 3s infinite alternate; }
-        @keyframes blink { from { opacity: 0.1; } to { opacity: 1; } }
-
-        /* الهيكل الرئيسي */
+        /* الشاشة الرئيسية */
         .app { display: flex; flex-direction: column; height: 100vh; position: relative; z-index: 10; }
-        .header { background: rgba(10, 10, 10, 0.9); padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
-        .header b { font-size: 20px; color: var(--gold); text-shadow: 0 0 10px var(--gold); }
-
+        .header { background: #111; padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
+        
         /* مشغل اليوتيوب العائم */
-        #yt-player { position: absolute; top: 70px; left: 10px; width: 160px; height: 100px; background: #000; border: 1px solid var(--gold); border-radius: 8px; z-index: 1000; display: none; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.5); }
-        #yt-player iframe { width: 100%; height: 100%; border: none; }
-        .close-yt { position: absolute; top: 0; right: 0; background: red; color: #fff; font-size: 10px; padding: 2px 5px; cursor: pointer; z-index: 1001; }
+        #yt-float { position: absolute; top: 70px; left: 10px; width: 200px; height: 120px; background: #000; border: 2px solid var(--gold); border-radius: 10px; z-index: 1000; display: none; overflow: hidden; }
+        #yt-float iframe { width: 100%; height: 100%; border: none; }
+        .close-btn { position: absolute; top: 0; right: 0; background: red; color: #fff; padding: 2px 8px; cursor: pointer; z-index: 1001; font-size: 12px; font-weight: bold; }
+
+        /* البحث عن يوتيوب */
+        #search-box { display: none; background: #111; padding: 15px; border-bottom: 1px solid var(--gold); }
+        #search-box input { width: 70%; padding: 10px; border-radius: 5px; border: none; }
+        #search-box button { width: 25%; padding: 10px; background: var(--gold); border: none; border-radius: 5px; font-weight: bold; }
 
         /* الشات */
-        #chat-win { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
-        .msg { display: flex; gap: 10px; align-items: flex-end; }
+        #chat-win { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
+        .msg { display: flex; gap: 10px; }
         .msg.me { flex-direction: row-reverse; }
         .u-img { width: 45px; height: 45px; border-radius: 10px; border: 2px solid var(--gold); object-fit: cover; }
         .bubble { max-width: 75%; background: rgba(30,30,30,0.9); padding: 10px; border-radius: 12px; border: 1px solid #333; }
         .me .bubble { border-color: var(--gold); background: #221d00; }
-        .u-name { font-size: 10px; color: var(--gold); font-weight: bold; margin-bottom: 3px; display: block; }
 
         /* الأجنحة الجانبية */
-        .side { position: fixed; top: 0; width: 280px; height: 100vh; background: var(--panel); transition: 0.4s; z-index: 2000; }
+        .side { position: fixed; top: 0; width: 280px; height: 100vh; background: #0a0a0a; transition: 0.4s; z-index: 2000; }
         #side-l { left: -282px; border-right: 2px solid var(--gold); }
         #side-r { right: -282px; border-left: 2px solid var(--gold); }
         .side.open { left: 0 !important; right: 0 !important; }
-        .side-h { padding: 20px; background: #111; color: var(--gold); font-weight: bold; text-align: center; border-bottom: 1px solid #222; }
 
-        /* المدخلات */
-        .footer { background: #000; padding: 10px; display: flex; gap: 8px; border-top: 1px solid #222; align-items: center; }
-        #mInp { flex: 1; background: #1a1a1a; border: 1px solid #333; color: #fff; padding: 12px; border-radius: 20px; outline: none; }
-        .btn { background: none; border: none; font-size: 24px; color: var(--gold); cursor: pointer; }
-
-        /* الملف الشخصي */
-        .prof-card { padding: 15px; text-align: center; }
-        .prof-img-prev { width: 80px; height: 80px; border-radius: 50%; border: 2px solid var(--gold); margin-bottom: 10px; object-fit: cover; }
-        .file-btn { display: block; background: #222; padding: 10px; border-radius: 8px; margin: 10px 0; cursor: pointer; border: 1px dashed var(--gold); font-size: 13px; }
+        /* شريط الكتابة */
+        .footer { background: #000; padding: 10px; display: flex; gap: 8px; border-top: 1px solid #222; }
+        #mInp { flex: 1; background: #1a1a1a; color: #fff; padding: 12px; border-radius: 20px; border: 1px solid #333; outline: none; }
     </style>
 </head>
 <body onclick="closeAll()">
 
-    <div id="stars"></div>
+    <div id="star-field"></div>
 
-    <div id="yt-player">
-        <span class="close-yt" onclick="this.parentElement.style.display='none'">X</span>
+    <div id="yt-float">
+        <span class="close-btn" onclick="this.parentElement.style.display='none'">إغلاق</span>
         <div id="player-frame"></div>
     </div>
 
     <div class="app">
         <div class="header">
-            <button onclick="toggleS('l', event)" class="btn">⚙️</button>
-            <b>مملكة علوش</b>
-            <button onclick="toggleS('r', event)" class="btn">👥</button>
+            <button onclick="toggleS('l', event)" style="background:none; border:none; font-size:24px;">⚙️</button>
+            <b style="color:var(--gold)">مملكة علوش</b>
+            <button onclick="toggleS('r', event)" style="background:none; border:none; font-size:24px;">👥</button>
+        </div>
+
+        <div id="search-box" onclick="event.stopPropagation()">
+            <input type="text" id="yt-query" placeholder="ابحث عن فيديو...">
+            <button onclick="searchYT()">بحث</button>
         </div>
 
         <div id="chat-win"></div>
 
         <div class="footer" onclick="event.stopPropagation()">
-            <input type="text" id="mInp" placeholder="اكتب هنا...">
-            <button onclick="send()" class="btn">🚀</button>
+            <input type="text" id="mInp" placeholder="اكتب رسالتك...">
+            <button onclick="send()" style="background:none; border:none; font-size:24px;">🚀</button>
         </div>
     </div>
 
     <div id="side-l" class="side" onclick="event.stopPropagation()">
-        <div class="side-h">الملف والتحكم ⚙️</div>
-        <div class="prof-card">
-            <img id="my-prev" src="" class="prof-img-prev">
-            <input type="text" id="new-n" placeholder="اسمك الملكي" style="width:100%; padding:8px; margin-bottom:10px;">
-            <label class="file-btn">
-                📸 تغيير الصورة من الجهاز
-                <input type="file" hidden onchange="handleFile(this)">
+        <div style="padding:20px; text-align:center; background:#111; color:var(--gold); font-weight:bold;">⚙️ الإعدادات</div>
+        <div style="padding:20px; text-align:center;">
+            <img id="my-av" src="" style="width:80px; height:80px; border-radius:50%; border:2px solid var(--gold); object-fit:cover;">
+            <input type="text" id="new-n" placeholder="تغيير الاسم" style="width:100%; padding:10px; margin-top:10px; background:#1a1a1a; color:#fff; border:1px solid #333;">
+            <label style="display:block; margin-top:10px; padding:10px; background:#222; border:1px dashed var(--gold); cursor:pointer;">
+                📷 تغيير الصورة
+                <input type="file" hidden accept="image/*" onchange="loadImg(this)">
             </label>
-            <button onclick="updateProf()" style="width:100%; background:var(--gold); padding:10px; border:none; font-weight:bold; border-radius:5px;">حفظ التغييرات</button>
-        </div>
-        <hr style="border: 0.5px solid #222;">
-        <div style="padding:10px;">
-            <button onclick="pushYT()" style="width:100%; background:#222; color:#fff; padding:10px; border:1px solid #444; margin-bottom:10px; border-radius:5px;">📺 بث يوتيوب للكل</button>
-            <button onclick="db.ref('main_msgs').remove()" style="width:100%; background:none; color:red; border:none; cursor:pointer;">🧨 تصفير الشات</button>
+            <button onclick="saveProf()" style="width:100%; padding:12px; background:var(--gold); border:none; margin-top:10px; font-weight:bold;">حفظ الملف</button>
+            <hr style="border:0.1px solid #222; margin:20px 0;">
+            <button onclick="document.getElementById('search-box').style.display='block'; closeAll();" style="width:100%; padding:12px; background:#ff0000; color:#fff; border:none; font-weight:bold; border-radius:5px;">📺 ابحث وشغل يوتيوب للكل</button>
+            <button onclick="db.ref('main_msgs').remove()" style="width:100%; padding:10px; background:none; color:#555; border:none; margin-top:20px;">تصفير الشات</button>
         </div>
     </div>
 
     <div id="side-r" class="side" onclick="event.stopPropagation()">
-        <div class="side-h">المتواجدون 👥</div>
+        <div style="padding:20px; text-align:center; background:#111; color:var(--gold); font-weight:bold;">👥 المتصلون</div>
         <div id="user-list"></div>
     </div>
 
@@ -118,33 +116,43 @@
             myID = u.uid;
             db.ref('users/'+myID).on('value', s => {
                 myD = s.val() || { n: "عضو جديد", av: "https://via.placeholder.com/100" };
-                document.getElementById('my-prev').src = myD.av;
+                document.getElementById('my-av').src = myD.av;
                 db.ref('status/'+myID).set({ n: myD.n, av: myD.av });
                 db.ref('status/'+myID).onDisconnect().remove();
             });
             init();
-            genStars();
+            makeStars();
         }
     });
 
     function toggleS(s, e) { e.stopPropagation(); closeAll(); document.getElementById('side-'+s).classList.add('open'); }
     function closeAll() { document.querySelectorAll('.side').forEach(s => s.classList.remove('open')); }
 
-    function handleFile(input) {
+    function loadImg(input) {
         const file = input.files[0];
         if(file) {
             const r = new FileReader();
-            r.onload = (e) => { tempImg = e.target.result; document.getElementById('my-prev').src = tempImg; };
+            r.onload = (e) => { tempImg = e.target.result; document.getElementById('my-av').src = tempImg; };
             r.readAsDataURL(file);
         }
     }
 
-    function updateProf() {
+    function saveProf() {
         const n = document.getElementById('new-n').value;
         const up = {}; if(n) up.n = n; if(tempImg) up.av = tempImg;
         db.ref('users/'+myID).update(up);
-        alert("تم التحديث بنجاح 👑");
+        alert("تم الحفظ 👑");
         closeAll();
+    }
+
+    function searchYT() {
+        const q = document.getElementById('yt-query').value;
+        if(!q) return;
+        // هنا نقوم بمحاكاة البحث وتوليد رابط مباشر (بما أن البحث الحقيقي يتطلب API Key معقد)
+        // سنستخدم ميزة "البحث المباشر" في يوتيوب
+        const searchURL = "https://www.youtube.com/embed?listType=search&list=" + encodeURIComponent(q);
+        db.ref('yt_sync').set({ url: searchURL, time: Date.now() });
+        document.getElementById('search-box').style.display = 'none';
     }
 
     function send() {
@@ -154,17 +162,12 @@
         document.getElementById('mInp').value = '';
     }
 
-    function pushYT() {
-        const id = prompt("أدخل كود اليوتيوب (مثال: dQw4w9WgXcQ):");
-        if(id) db.ref('yt_sync').set({ id: id, time: Date.now() });
-    }
-
     function init() {
         db.ref('main_msgs').limitToLast(40).on('child_added', s => {
             const d = s.val();
             const div = document.createElement('div');
             div.className = `msg ${d.uid === myID ? 'me' : ''}`;
-            div.innerHTML = `<img src="${d.av}" class="u-img"><div class="bubble"><span class="u-name">${d.n}</span>${d.t}</div>`;
+            div.innerHTML = `<img src="${d.av}" class="u-img"><div class="bubble"><b style="font-size:10px; color:var(--gold); display:block;">${d.n}</b>${d.t}</div>`;
             document.getElementById('chat-win').appendChild(div);
             document.getElementById('chat-win').scrollTop = document.getElementById('chat-win').scrollHeight;
         });
@@ -178,22 +181,21 @@
             });
         });
 
-        // مزامنة اليوتيوب عند الكل
         db.ref('yt_sync').on('value', s => {
             const d = s.val();
             if(d) {
-                document.getElementById('yt-player').style.display = 'block';
-                document.getElementById('player-frame').innerHTML = `<iframe src="https://www.youtube.com/embed/${d.id}?autoplay=1" allow="autoplay"></iframe>`;
+                document.getElementById('yt-float').style.display = 'block';
+                document.getElementById('player-frame').innerHTML = `<iframe src="${d.url}&autoplay=1" allow="autoplay"></iframe>`;
             }
         });
     }
 
-    function genStars() {
+    function makeStars() {
         for(let i=0; i<50; i++) {
             const s = document.createElement('div'); s.className = 'star';
             s.style.width = s.style.height = Math.random()*3+'px';
             s.style.top = Math.random()*100+'%'; s.style.left = Math.random()*100+'%';
-            document.getElementById('stars').appendChild(s);
+            document.getElementById('star-field').appendChild(s);
         }
     }
 </script>
