--- a/index.html
+++ b/index.html
@@ -1,35 +1,80 @@
-// --- نظام الرتب المتطور ---
-function checkRankUpgrade(msgCount) {
-    if (msgCount >= 500) return { name: "أسطورة المملكة 👑", color: "#ff0000", glow: "0 0 10px red" };
-    if (msgCount >= 200) return { name: "وزير المملكة 🎖️", color: "#00ff00", glow: "none" };
-    if (msgCount >= 50) return { name: "فارس المملكة ⚔️", color: "#00ccff", glow: "none" };
-    return { name: "عضو جديد 🌱", color: "#888", glow: "none" };
+// --- قاعدة بيانات الأسئلة (تقدر تضيف قد ما تريد) ---
+const quizBank = [
+    { q: "ما هي عاصمة اليابان؟", a: "طوكيو" },
+    { q: "ما هو أطول نهر في العالم؟", a: "النيل" },
+    { q: "كم عدد سجدات التلاوة في القرآن الكريم؟", a: "15" },
+    { q: "ما هو كوكب الأحمر؟", a: "المريخ" },
+    { q: "من هو مخترع المصباح الكهربائي؟", a: "اديسون" },
+    { q: "ما هي عاصمة فرنسا؟", a: "باريس" },
+    { q: "ما هو الحيوان الذي يلقب بسفينة الصحراء؟", a: "الجمل" },
+    { q: "أكبر دولة في العالم من حيث المساحة؟", a: "روسيا" },
+    { q: "كم عدد ألوان قوس قزح؟", a: "7" },
+    { q: "ما هو المعدن السائل الوحيد؟", a: "الزئبق" }
+];
+
+let usedQuestions = []; // مصفوفة لحفظ الأسئلة المستخدمة منعاً للتكرار
+let currentAnswer = ""; // لحفظ جواب السؤال الحالي
+
+// --- وظيفة تشغيل البوت عند كتابة كلمة "اسئلة" ---
+function checkBotCommand(msgText, userName) {
+    if (msgText === "اسئلة" || msgText === "أسئلة") {
+        startSmartQuiz();
+        return true;
+    }
+    
+    // التحقق من الجواب
+    if (currentAnswer !== "" && msgText.trim() === currentAnswer) {
+        db.ref('main_msgs').push({
+            uid: "system_bot",
+            n: "بوت المملكة 🤖",
+            av: "https://cdn-icons-png.flaticon.com/512/4712/4712035.png",
+            t: `🎉 كفووو يا ${userName}.. جوابك صح! الجواب هو [ ${currentAnswer} ]`,
+            type: "system"
+        });
+        currentAnswer = ""; // تصفير الجواب لانتظار السؤال القادم
+        return true;
+    }
+    return false;
 }
 
-// --- ميزة الهمس (الرسائل الخاصة) ---
-function sendWhisper(targetUID, targetName) {
-    const msg = prompt(`أرسل رسالة خاصة إلى ${targetName}:`);
-    if (msg) {
+function startSmartQuiz() {
+    // تصفير الأسئلة إذا خلصت كل القائمة حتى يبدأ من جديد
+    if (usedQuestions.length === quizBank.length) {
+        usedQuestions = [];
+    }
+
+    // اختيار سؤال لم يتم استخدامه
+    let availableQuestions = quizBank.filter(q => !usedQuestions.includes(q.q));
+    let randomQ = availableQuestions[Math.floor(Math.random() * availableQuestions.length)];
+
+    usedQuestions.push(randomQ.q);
+    currentAnswer = randomQ.a;
+
+    db.ref('main_msgs').push({
+        uid: "system_bot",
+        n: "بوت المملكة 🤖",
+        av: "https://cdn-icons-png.flaticon.com/512/4712/4712035.png",
+        t: `❓ سؤال جديد: ${randomQ.q} \n (أسرع واحد يجاوب!)`,
+        type: "quiz_question"
+    });
+}
+
+// --- تحديث وظيفة الإرسال send() لتشمل فحص البوت ---
+function send() {
+    const t = document.getElementById('mInp').value.trim();
+    if(!t) return;
+
+    // فحص إذا كان الكلام موجه للبوت
+    const isBotAction = checkBotCommand(t, myD.n);
+
+    if (!isBotAction) {
         db.ref('main_msgs').push({
             uid: myID,
             n: myD.n,
             av: myD.av,
-            t: `(همس إلى ${targetName}): ${msg}`,
-            isWhisper: true,
-            toUID: targetUID,
+            t: t,
             time: Date.now()
         });
     }
-}
-
-// --- ميزة التفاعل (إرسال لايك سريع) ---
-function sendQuickLike() {
-    db.ref('main_msgs').push({
-        uid: myID,
-        n: myD.n,
-        av: myD.av,
-        t: "👍🏻❤",
-        type: "reaction",
-        time: Date.now()
-    });
+    document.getElementById('mInp').value = '';
 }
