--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
-// --- قاعدة بيانات الأسئلة (تقدر تضيف قد ما تريد) ---
-const quizBank = [
-    { q: "ما هي عاصمة اليابان؟", a: "طوكيو" },
-    { q: "ما هو أطول نهر في العالم؟", a: "النيل" },
-    { q: "كم عدد سجدات التلاوة في القرآن الكريم؟", a: "15" },
-    { q: "ما هو كوكب الأحمر؟", a: "المريخ" },
-    { q: "من هو مخترع المصباح الكهربائي؟", a: "اديسون" },
-    { q: "ما هي عاصمة فرنسا؟", a: "باريس" },
-    { q: "ما هو الحيوان الذي يلقب بسفينة الصحراء؟", a: "الجمل" },
-    { q: "أكبر دولة في العالم من حيث المساحة؟", a: "روسيا" },
-    { q: "كم عدد ألوان قوس قزح؟", a: "7" },
-    { q: "ما هو المعدن السائل الوحيد؟", a: "الزئبق" }
-];
+// 1. نظام الترحيب التلقائي
+db.ref('status').on('child_added', (snapshot) => {
+    const user = snapshot.val();
+    db.ref('main_msgs').push({
+        uid: "system_bot",
+        n: "بوت المملكة 🤖",
+        av: "https://cdn-icons-png.flaticon.com/512/4712/4712035.png",
+        t: `يا هلا بيك يا ${user.n}، نورت مملكة علوش 👑✨`,
+        type: "welcome"
+    });
+});
 
-let usedQuestions = []; // مصفوفة لحفظ الأسئلة المستخدمة منعاً للتكرار
-let currentAnswer = ""; // لحفظ جواب السؤال الحالي
+// 2. ميزة اهتزاز الشات (Shake Effect)
+function shakeChat() {
+    const win = document.getElementById('chat-win');
+    win.style.animation = "shake 0.5s";
+    setTimeout(() => win.style.animation = "", 500);
+}
 
-// --- وظيفة تشغيل البوت عند كتابة كلمة "اسئلة" ---
+// 3. تحديث فحص البوت (إصلاح الكود اللي بالصورة)
 function checkBotCommand(msgText, userName) {
     if (msgText === "اسئلة" || msgText === "أسئلة") {
         startSmartQuiz();
         return true;
     }
+    // إذا كتب "انفجار" يهتز الشات عند الكل (تحتاج مزامنة بالفيربيس)
+    if (msgText === "انفجار") {
+        shakeChat();
+    }
     
-    // التحقق من الجواب
     if (currentAnswer !== "" && msgText.trim() === currentAnswer) {
         db.ref('main_msgs').push({
             uid: "system_bot",
@@ -31,50 +36,8 @@ function checkBotCommand(msgText, userName) {
             t: `🎉 كفووو يا ${userName}.. جوابك صح! الجواب هو [ ${currentAnswer} ]`,
             type: "system"
         });
-        currentAnswer = ""; // تصفير الجواب لانتظار السؤال القادم
+        currentAnswer = "";
         return true;
     }
     return false;
-}
-
-function startSmartQuiz() {
-    // تصفير الأسئلة إذا خلصت كل القائمة حتى يبدأ من جديد
-    if (usedQuestions.length === quizBank.length) {
-        usedQuestions = [];
-    }
-
-    // اختيار سؤال لم يتم استخدامه
-    let availableQuestions = quizBank.filter(q => !usedQuestions.includes(q.q));
-    let randomQ = availableQuestions[Math.floor(Math.random() * availableQuestions.length)];
-
-    usedQuestions.push(randomQ.q);
-    currentAnswer = randomQ.a;
-
-    db.ref('main_msgs').push({
-        uid: "system_bot",
-        n: "بوت المملكة 🤖",
-        av: "https://cdn-icons-png.flaticon.com/512/4712/4712035.png",
-        t: `❓ سؤال جديد: ${randomQ.q} \n (أسرع واحد يجاوب!)`,
-        type: "quiz_question"
-    });
-}
-
-// --- تحديث وظيفة الإرسال send() لتشمل فحص البوت ---
-function send() {
-    const t = document.getElementById('mInp').value.trim();
-    if(!t) return;
-
-    // فحص إذا كان الكلام موجه للبوت
-    const isBotAction = checkBotCommand(t, myD.n);
-
-    if (!isBotAction) {
-        db.ref('main_msgs').push({
-            uid: myID,
-            n: myD.n,
-            av: myD.av,
-            t: t,
-            time: Date.now()
-        });
-    }
-    document.getElementById('mInp').value = '';
 }
