--- a/index.html
+++ b/index.html
@@ -1,43 +1,108 @@
-// 1. نظام الترحيب التلقائي
-db.ref('status').on('child_added', (snapshot) => {
-    const user = snapshot.val();
-    db.ref('main_msgs').push({
-        uid: "system_bot",
-        n: "بوت المملكة 🤖",
-        av: "https://cdn-icons-png.flaticon.com/512/4712/4712035.png",
-        t: `يا هلا بيك يا ${user.n}، نورت مملكة علوش 👑✨`,
-        type: "welcome"
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>مملكة علوش - الإصدار المصلح 👑</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <style>
+        :root { --gold: #ffd700; --bg: #000; }
+        body { background: var(--bg); color: #fff; font-family: sans-serif; margin: 0; overflow: hidden; height: 100vh; }
+        .app { display: flex; flex-direction: column; height: 100vh; }
+        .header { background: #111; padding: 15px; display: flex; justify-content: space-between; align-items: center; border-bottom: 2px solid var(--gold); }
+        #chat-win { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
+        .msg { display: flex; gap: 10px; margin-bottom: 10px; }
+        .msg.me { flex-direction: row-reverse; }
+        .u-img { width: 45px; height: 45px; border-radius: 12px; border: 2px solid var(--gold); object-fit: cover; }
+        .bubble { max-width: 75%; background: #1a1a1a; padding: 10px; border-radius: 12px; border: 1px solid #333; }
+        .me .bubble { border-color: var(--gold); background: #221d00; }
+        .footer { background: #000; padding: 10px; display: flex; gap: 8px; border-top: 1px solid #222; }
+        #mInp { flex: 1; background: #111; color: #fff; padding: 12px; border-radius: 25px; border: 1px solid #333; outline: none; }
+        /* ستايل البوت */
+        .bot-msg .bubble { background: linear-gradient(45deg, #001f3f, #0074D9) !important; border-color: #7FDBFF !important; }
+    </style>
+</head>
+<body>
+
+<div class="app">
+    <div class="header">
+        <b style="color:var(--gold)">👑 مملكة علوش</b>
+        <span id="user-count" style="font-size:12px;">المتصلين: 0</span>
+    </div>
+    <div id="chat-win"></div>
+    <div class="footer">
+        <input type="text" id="mInp" placeholder="اكتب 'اسئلة' لتشغيل البوت..." onkeypress="if(event.key==='Enter') send()">
+        <button onclick="send()" style="background:none; border:none; font-size:24px; cursor:pointer;">🚀</button>
+    </div>
+</div>
+
+<script>
+    // 1. إعدادات فيربيسا (استخدم بياناتك)
+    const firebaseConfig = {
+        apiKey: "AIzaSyDpjqkb4U-RF71r_Zv3tHAV9wWWe2L3pEQ",
+        authDomain: "masterchat-f2da9.firebaseapp.com",
+        databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com",
+        projectId: "masterchat-f2da9"
+    };
+    if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
+    const db = firebase.database();
+    const auth = firebase.auth();
+
+    let myID, myD = { n: "علوش", av: "https://via.placeholder.com/100" };
+    let currentAnswer = "";
+    const quizBank = [
+        { q: "ما هي عاصمة العراق؟", a: "بغداد" },
+        { q: "ما هو أطول نهر في العالم؟", a: "النيل" },
+        { q: "كم عدد ألوان قوس قزح؟", a: "7" },
+        { q: "ما هو كوكب الأحمر؟", a: "المريخ" }
+    ];
+
+    // 2. تسجيل الدخول التلقائي
+    auth.signInAnonymously().then(u => {
+        myID = u.user.uid;
+        initApp();
     });
-});
 
-// 2. ميزة اهتزاز الشات (Shake Effect)
-function shakeChat() {
-    const win = document.getElementById('chat-win');
-    win.style.animation = "shake 0.5s";
-    setTimeout(() => win.style.animation = "", 500);
-}
+    function send() {
+        const t = document.getElementById('mInp').value.trim();
+        if(!t) return;
 
-// 3. تحديث فحص البوت (إصلاح الكود اللي بالصورة)
-function checkBotCommand(msgText, userName) {
-    if (msgText === "اسئلة" || msgText === "أسئلة") {
-        startSmartQuiz();
-        return true;
+        // فحص أوامر البوت
+        if (t === "اسئلة" || t === "أسئلة") {
+            startQuiz();
+        } else if (currentAnswer !== "" && t === currentAnswer) {
+            db.ref('main_msgs').push({ n: "بوت المملكة 🤖", t: "✅ جواب صح! كفو منك يا بطل.", isBot: true });
+            currentAnswer = "";
+        } else {
+            db.ref('main_msgs').push({ uid: myID, n: myD.n, av: myD.av, t: t });
+        }
+        document.getElementById('mInp').value = '';
     }
-    // إذا كتب "انفجار" يهتز الشات عند الكل (تحتاج مزامنة بالفيربيس)
-    if (msgText === "انفجار") {
-        shakeChat();
+
+    function startQuiz() {
+        const random = quizBank[Math.floor(Math.random() * quizBank.length)];
+        currentAnswer = random.a;
+        db.ref('main_msgs').push({ n: "بوت المملكة 🤖", t: "❓ سؤال: " + random.q, isBot: true });
     }
-    
-    if (currentAnswer !== "" && msgText.trim() === currentAnswer) {
-        db.ref('main_msgs').push({
-            uid: "system_bot",
-            n: "بوت المملكة 🤖",
-            av: "https://cdn-icons-png.flaticon.com/512/4712/4712035.png",
-            t: `🎉 كفووو يا ${userName}.. جوابك صح! الجواب هو [ ${currentAnswer} ]`,
-            type: "system"
+
+    function initApp() {
+        db.ref('main_msgs').limitToLast(20).on('child_added', s => {
+            const d = s.val();
+            const div = document.createElement('div');
+            div.className = `msg ${d.uid === myID ? 'me' : ''} ${d.isBot ? 'bot-msg' : ''}`;
+            div.innerHTML = `
+                <img src="${d.av || 'https://cdn-icons-png.flaticon.com/512/4712/4712035.png'}" class="u-img">
+                <div class="bubble">
+                    <b style="display:block; font-size:10px; color:var(--gold);">${d.n}</b>
+                    ${d.t}
+                </div>
+            `;
+            document.getElementById('chat-win').appendChild(div);
+            document.getElementById('chat-win').scrollTop = document.getElementById('chat-win').scrollHeight;
         });
-        currentAnswer = "";
-        return true;
     }
-    return false;
-}
+</script>
+</body>
+</html>
