--- a/index.html
+++ b/index.html
@@ -1,96 +1,75 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>مملكة علوش المستقرة 👑</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مملكة علوش 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-
     <style>
-        body { margin: 0; background: #000; color: #fff; font-family: sans-serif; height: 100vh; overflow: hidden; }
-        .app { display: flex; flex-direction: column; height: 100vh; }
-        .header { background: #111; padding: 15px; text-align: center; border-bottom: 2px solid #ffd700; color: #ffd700; font-weight: bold; }
+        body { margin: 0; background: #000; color: #fff; font-family: sans-serif; height: 100vh; display: flex; flex-direction: column; }
+        .header { background: #111; padding: 15px; text-align: center; border-bottom: 2px solid #ffd700; color: #ffd700; }
         #chat-win { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
-        .footer { background: #0a0a0a; padding: 10px; display: flex; align-items: center; border-top: 1px solid #333; direction: ltr !important; }
-        #mInp { flex: 1; background: #1a1a1a; color: #fff; padding: 12px; border-radius: 25px; border: 1px solid #444; outline: none; text-align: right; direction: rtl !important; font-size: 16px; margin-left: 10px; }
-        .send-btn { font-size: 30px; cursor: pointer; background: none; border: none; padding: 0; }
-        .msg { background: #1a1a1a; padding: 10px; border-radius: 12px; border-right: 3px solid #ffd700; align-self: flex-start; max-width: 85%; direction: rtl; }
+        .footer { background: #111; padding: 10px; display: flex; align-items: center; gap: 10px; border-top: 1px solid #333; direction: ltr !important; }
+        #mInp { flex: 1; background: #222; color: #fff; padding: 12px; border-radius: 25px; border: 1px solid #444; outline: none; text-align: right; direction: rtl !important; }
+        .send-btn { font-size: 30px; cursor: pointer; background: none; border: none; }
+        .msg { background: #1a1a1a; padding: 10px; border-radius: 10px; border-right: 3px solid #ffd700; align-self: flex-start; }
     </style>
 </head>
 <body>
-
-    <div class="app">
-        <div class="header">مملكة علوش 👑</div>
-        <div id="chat-win"></div>
-        <div class="footer">
-            <button class="send-btn" type="button" onclick="goSend()">🚀</button>
-            <input type="text" id="mInp" placeholder="تحدث يا ملك..." onkeydown="if(event.key==='Enter') goSend()">
-        </div>
+    <div class="header">مملكة علوش 👑</div>
+    <div id="chat-win"></div>
+    <div class="footer">
+        <button class="send-btn" type="button" onclick="sendMsg()">🚀</button>
+        <input type="text" id="mInp" placeholder="اكتب هنا..." onkeydown="if(event.key==='Enter') sendMsg()">
     </div>
 
 <script>
-    // 1. إعدادات Firebase
     const firebaseConfig = {
         apiKey: "AIzaSyDpjqkb4U-RF71r_Zv3tHAV9wWWe2L3pEQ",
         authDomain: "masterchat-f2da9.firebaseapp.com",
         databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com",
         projectId: "masterchat-f2da9"
     };
-    
-    // منع تكرار التشغيل
-    if (!firebase.apps.length) {
-        firebase.initializeApp(firebaseConfig);
-    }
-    
+
+    if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
     const auth = firebase.auth();
-    let myID = null;
-    let myName = "علوش";
 
-    // 2. تسجيل الدخول والتأكد من الاتصال
-    auth.signInAnonymously().then(u => {
-        myID = u.user.uid;
-        console.log("Logged in as: " + myID);
-        loadMsgs();
-    }).catch(e => alert("فشل الاتصال: " + e.message));
+    // دخول مجهول لضمان تخطي "فشل الاتصال"
+    auth.signInAnonymously().then(() => {
+        console.log("متصل بنجاح ✅");
+        loadMessages();
+    }).catch(err => {
+        console.error(err);
+        // إذا فشل الـ Auth، نشغل الشات بدونه (لأن القواعد مفتوحة الآن)
+        loadMessages();
+    });
 
-    // 3. ✅ وظيفة الإرسال القوية
-    function goSend() {
+    function sendMsg() {
         const inp = document.getElementById('mInp');
-        const val = inp.value.trim();
+        const txt = inp.value.trim();
+        if (txt === "") return;
 
-        if (val === "") return;
-
-        if (!myID) {
-            alert("لحظة يا ملك، جاري الاتصال بالخادم...");
-            return;
-        }
-
-        // إرسال البيانات
+        // إرسال مباشر
         db.ref('main_msgs').push({
-            uid: myID,
-            n: myName,
-            t: val,
-            time: firebase.database.ServerValue.TIMESTAMP
+            n: "علوش",
+            t: txt,
+            time: Date.now()
         }).then(() => {
-            // تصفير المربع
             inp.value = "";
             inp.focus();
-        }).catch(err => {
-            alert("خطأ في الإرسال: " + err.message);
-        });
+        }).catch(e => alert("حدث خطأ: " + e.message));
     }
 
-    // 4. تحميل الرسائل
-    function loadMsgs() {
+    function loadMessages() {
         db.ref('main_msgs').limitToLast(50).on('child_added', s => {
             const d = s.val();
             const div = document.createElement('div');
             div.className = 'msg';
-            div.style.marginBottom = "8px";
-            div.innerHTML = `<b style="color:#ffd700; font-size:11px;">${d.n}</b><br>${d.t}`;
+            div.style.marginBottom = "5px";
+            div.innerHTML = `<b style="color:#ffd700;">${d.n}</b><br>${d.t}`;
             document.getElementById('chat-win').appendChild(div);
             document.getElementById('chat-win').scrollTop = document.getElementById('chat-win').scrollHeight;
         });
